# backend-challenge

./: .gitignore  API_ROUTES.md  README.md  WRITEUP.md  app.py  bootstrap.py  models.py  pyproject.toml  run_tests.py  test_apis  test_apis.py  test_models.py  test_validation.py  validation.py
scripts/: __init__.py  bootstrap.py  run_tests.py
src/: __init__.py  app.py  database.py  models.py
tests/: __init__.py  test_api_validation.py  test_apis.py  test_models.py  test_review_apis.py  test_reviews.py  test_validation.py
