[tool.poetry]
name = "backend-challenge"
version = "0.1.0"
description = "Backend Challenge for Penn Labs"
authors = ["Kevin Xue <kevinxue@seas.upenn.edu>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "3.0.0"
flask-sqlalchemy = "3.1.1"
pytest = "8.3.4"




[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["src"]
